[package]
name = "demo_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
hex = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.8"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
once_cell = "1.5"
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
